--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,36 @@
-title: Samuran Blog Tech.
-author: Samuel
-email: your-email@domain.com
-theme: jekyll-theme-minimal
-# social links
-show_excerpts: false # set to false to remove excerpts on the homepage
+title: Blog Samuran Tech.
+description: > # this means to ignore newlines until "baseurl:"
+  Un blog sobre las cosas que he ido aprendiendo en mis pocos años de sysadmin
+  y las cosas que iré aprendiendo.
+permalink: ':title/'
+baseurl: "/flexible-jekyll" # the subpath of your site, e.g. /blog
+url: "https://www.samuran.tk" # the base hostname & protocol for your site, e.g. http://example.com
+site-twitter: #if your site has a twitter account, enter it here
+
+# Author Settings
+author: Samuran # add your name
+author-img: samuran.jpg # add your photo
+about-author: No sé qué poner sobre mí # add description
+social-twitter: samurantech # add your Twitter handle
+social-instagram: # add your Facebook handle
+social-github: atomarxculo # add your Github handle
+social-linkedin: samuel-hernández-gigorro-b65b99173 # add your Linkedin handle
+social-email: samuel.hernandez@gmx.es # add your Email address
+
+# Disqus
+discus-identifier: samuran-blog # add your discus identifier
+
+# Tracker
+analytics: # Google Analytics
+
+# Build Settings
+markdown: kramdown
+plugins:
+  - jekyll-sitemap
+  - jekyll-paginate
+  - jemoji
+
+paginate: 8
+paginate_path: "/page/:num"
+
+exclude: ["node_modules", "gulpfile.js", "package.json", "yarn.lock"]
