--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Un blog sobre las cosas que he ido aprendiendo en mis pocos años de sysadmin
   y las cosas que iré aprendiendo.
 permalink: ':title/'
-baseurl: "/flexible-jekyll" # the subpath of your site, e.g. /blog
+baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://www.samuran.tk" # the base hostname & protocol for your site, e.g. http://example.com
 site-twitter: #if your site has a twitter account, enter it here
 
