--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ site-twitter: #if your site has a twitter account, enter it here
 # Author Settings
 author: Samuran # add your name
 author-img: samuran.jpg # add your photo
-about-author: No sé qué poner sobre mí # add description
+about-author: Sysadmin con muchas ganas de aprender y compartir todo ese conocimiento. # add description
 social-twitter: samurantech # add your Twitter handle
 social-instagram: # add your Facebook handle
 social-github: atomarxculo # add your Github handle
