--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: > # this means to ignore newlines until "baseurl:"
   y las cosas que iré aprendiendo.
 permalink: ':title/'
 baseurl: "/" # the subpath of your site, e.g. /blog
-url: "https://www.samurantech.tk" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://www.samurantech.com" # the base hostname & protocol for your site, e.g. http://example.com
 site-twitter: samurantech #if your site has a twitter account, enter it here
 locale: es_ES
 
