--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ social-twitter: samurantech # add your Twitter handle
 social-instagram: # add your Facebook handle
 social-github: atomarxculo # add your Github handle
 social-linkedin: samuel-hernández-gigorro-b65b99173 # add your Linkedin handle
-social-email: samuel.hernandez@gmx.es # add your Email address
+social-email: samuran@samurantech.com # add your Email address
 
 # Disqus
 discus-identifier: samuran-blog # add your discus identifier
