--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,7 @@ social-instagram: # add your Facebook handle
 social-github: atomarxculo # add your Github handle
 social-linkedin: samuel-hernández-gigorro-b65b99173 # add your Linkedin handle
 social-email: samuran@samurantech.com # add your Email address
+social-slack: samurantech # add your Slack page
 
 # Disqus
 discus-identifier: samuran-blog # add your discus identifier
