--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ social-github: atomarxculo # add your Github handle
 social-linkedin: samuel-hernández-gigorro-b65b99173 # add your Linkedin handle
 social-email: samuran@samurantech.com # add your Email address
 social-slack: samurantech # add your Slack page
+social-trello: blog
 
 # Disqus
 discus-identifier: samuran-blog # add your discus identifier
