--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,8 @@ jobs:
         run: npm i && npm run build
 
       - run: bundle exec jekyll build
+        env:
+          JEKYLL_ENV: "production"
 
       - uses: peaceiris/actions-gh-pages@v4
         with:
