Configurar construcción auto por cron, prueba a las 16:15

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,8 @@ on:
   repository_dispatch:
     types: [deploy]
   workflow_dispatch:
+  schedule:
+    - cron "15 16 * * *"
 
 permissions:
   contents: write
