--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
     types: [deploy]
   workflow_dispatch:
   schedule:
-    - cron: "20 15 * * *"
+    - cron: "*/5 * * * *"
 
 permissions:
   contents: write
