--- a/_config.yml
+++ b/_config.yml
@@ -97,6 +97,7 @@ theme_mode: # [light | dark]
 #
 # e.g. 'https://cdn.com'
 cdn: "https://www.samurantech.com"
+#cdn: "http://localhost:4000"
 
 # the avatar on sidebar, support local or CORS resources
 avatar: "/assets/img/samuran.jpg"
